--- a/designPatterns/pom.xml
+++ b/designPatterns/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.mashibing</groupId>
     <artifactId>designPatterns</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -19,6 +20,9 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>../eureka</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
