详解动态代理 				动态代理:在内存中动态生成代理类 				JDK和CGLib动态代理底层用的都是ASM（直接操作class文件二进制码 ，在代理类中生成所要代理的方法） 					JDK 						被代理的对象必须要实现至少一个接口 					CGLib 						被代理的对象不需要实现接口 				Spring动态代理(AOP)底层也是ASM 				场景 ： 对业务代码切入代理的逻辑 ： 加日志 加权限 。。。

--- a/designPatterns/pom.xml
+++ b/designPatterns/pom.xml
@@ -28,6 +28,13 @@
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
 
